--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-bottom: 2rem;
 }
 
@@ -83,4 +83,11 @@ button {
     color: white;
     cursor: pointer;
     font-size: 1.2rem;
+}
+
+.projeto {
+    margin-top: 2rem;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
