--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     scroll-behavior: smooth;
 }
 
+/* Definindo estilo para a página inteira */
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
@@ -16,6 +17,7 @@ body {
     padding-bottom: 2rem;
 }
 
+/* Definindo estilo para a barra de navegação */
 nav {
     position: fixed;
     top: 0;
@@ -51,6 +53,7 @@ mt-10 {
     margin-top: 10rem;
 }
 
+/* Definindo estilo para âncora no hover */
 a:hover {
     color: #007bff;
 }
@@ -59,6 +62,7 @@ section {
     padding-top: 6rem;
 }
 
+/* Definindo estilo para o formulário de contato */
 form {
     margin-top: 2rem;
 }
@@ -85,6 +89,7 @@ button {
     font-size: 1.2rem;
 }
 
+/* Definindo estilo para a sepação dos projetos do portfólio */
 .projeto {
     margin-top: 2rem;
     padding: 1rem;
